2002-09-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (pop_menu_up):
	fixed accidental menu animation with certain menu position hints

2002-09-23  olicha  <olivier.chapuis@free.fr>

	* libs/FRender.c (*):
	Fixed(?) XRender rendering with some Xserver

	* fvwm/update.c (apply_window_updates):
	* fvwm/geometry.c (move_icon_to_position):
	* fvwm/events.c (HandleEnterNotify):
	(HandleExpose):
	(HandleLeaveNotify):
	(HandlePropertyNotify):
	* fvwm/add_window.c (setup_icon_font):
	* fvwm/icons.c (DrawIconWindow):
	(ChangeIconPixmap):
	(RedoIconName):
	Clip text and icon drawing for the icons

2002-09-21  Mikhael Goikhman  <migo@homemail.com>

	* NEWS:
	* libs/System.c:
	Path commands now support form: "path1;ext1:path2:path3;ext3"
	where ext1 (for example, ".png") means all files in path1 should
	be forced to have extention ".png" even if the requested icon
	has ".xpm" ("calculator.xpm" or has no extention at all ("calculator")

	* fvwm/execcontext.h:
	small changes in latters used for EXCT_* constants

	* fvwm/module_interface.c:
	* libs/Picture.c:
	* libs/PictureBase.c:
	* fvwm/cursor.c:
	some spacing reindentation

2002-09-21  olicha  <olivier.chapuis@free.fr>

	* libs/FRender.c (FRenderCompositeAndCheck):
	Temporally take GraphicsExposure in account

2002-09-20  Mikhael Goikhman  <migo@homemail.com>

	* libs/vpacket.h:
	fixed incorrect MiniIconPacket definition: s/char *name/char name[1]/

2002-09-20  olicha  <olivier.chapuis@free.fr>

	* fvwm/icons.c (GetIconPicture):
	* fvwm/ewmh_icons.c (ewmh_SetWmIconFromPixmap):
	Fixed the alpha channel

2002-09-20  Dominik Vogt  <dominik.vogt@gmx.de>

	* NEWS:
	updated for 2.4.11

2002-09-20  olicha  <olivier.chapuis@free.fr>

	* libs/FRender.c (FRenderTintPicture):
	(FRenderTintRectangle):
	(FRenderRender):
	* libs/FRenderInterface.h:
	* libs/PictureGraphics.c (PGraphicsTintRectangle):
	Make FRender code more modular. Add a 24+8 tinting method and enable it