@@ -516,7 +516,7 @@ void Done(int restart, char *command)
 
 		char *action = safestrdup(
 			CatString2("Function ", exitFuncName));
-		ecc.type = EXCT_NULL;
+		ecc.type = EXCT_EXIT;
 		ecc.w.wcontext = C_ROOT;
 		exc = exc_create_context(&ecc, ECC_TYPE | ECC_WCONTEXT);
 		execute_function(NULL, exc, action, 0);
@@ -1317,7 +1317,7 @@ static void SetRCDefaults(void)
 		const exec_context_t *exc;
 		exec_context_changes_t ecc;
 
-		ecc.type = EXCT_NULL;
+		ecc.type = EXCT_INIT;
 		ecc.w.wcontext = C_ROOT;
 		exc = exc_create_context(&ecc, ECC_TYPE | ECC_WCONTEXT);
 		execute_function(NULL, exc, defaults[i], 0);
@@ -1391,8 +1391,9 @@ void StartupStuff(void)
 	const exec_context_t *exc;
 	exec_context_changes_t ecc;
 
+	ecc.type = EXCT_INIT;
 	ecc.w.wcontext = C_ROOT;
-	exc = exc_create_null_context();
+	exc = exc_create_context(&ecc, ECC_TYPE | ECC_W);
 	CaptureAllWindows(exc, False);
 	/* Turn off the SM stuff after the initial capture so that new windows
 	 * will not be matched by accident. */
@@ -2168,7 +2169,7 @@ int main(int argc, char **argv)
 	simplify_style_list();
 
 	DBUG("main", "Running config_commands...");
-	ecc.type = EXCT_NULL;
+	ecc.type = EXCT_INIT;
 	ecc.w.wcontext = C_ROOT;
 	exc = exc_create_context(&ecc, ECC_TYPE | ECC_WCONTEXT);
 	if (num_config_commands > 0)
