@@ -1,5 +1,15 @@
 2002-09-23  Dominik Vogt  <dominik.vogt@gmx.de>
 
+	* fvwm/execcontext.h (enum):
+	* fvwm/fvwm.c (Done):
+	(SetRCDefaults):
+	(main):
+	(StartupStuff):
+	use new contexts
+
+	* fvwm/execcontext.h (enum):
+	added EXCT_INIT ['I'] and EXCT_EXIT ['X'] contexts
+
 	* fvwm/menus.c (pop_menu_up):
 	fixed accidental menu animation with certain menu position hints
 
